--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "babel-loader": "^7.1.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^5.7.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "serviceworker-webpack-plugin": "^1.0.0-alpha02",
@@ -18,11 +24,14 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "eslint": "./node_modules/.bin/eslint src --fix",
+    "server": "node server.js"
   },
   "dependencies": {
     "angular": "^1.7.5",
     "angular-ui-router": "^1.0.20",
+    "express": "^4.16.4",
     "lodash": "^4.17.11"
   }
 }
