--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "webpack",
     "start": "webpack-dev-server",
     "eslint": "./node_modules/.bin/eslint src --fix",
-    "server": "node server.js"
+    "server": "node server.js",
+    "test": "jasmine"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -23,6 +24,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jasmine": "^3.3.0",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "serviceworker-webpack-plugin": "^1.0.0-alpha02",
