--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "webpack",
     "start": "webpack-dev-server",
     "eslint": "./node_modules/.bin/eslint src --fix",
+    "karma": "./node_modules/karma/bin/karma",
     "server": "node server.js",
     "test": "jasmine"
   },
@@ -24,7 +25,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "jasmine": "^3.3.0",
+    "jasmine": "2.99.0",
+    "karma": "^3.1.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^1.1.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "serviceworker-webpack-plugin": "^1.0.0-alpha02",
@@ -34,7 +38,9 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@angular/cli": "^7.0.5",
     "angular": "^1.7.5",
+    "angular-mocks": "^1.7.5",
     "angular-ui-router": "^1.0.20",
     "express": "^4.16.4",
     "lodash": "^4.17.11"
